--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -8,16 +8,20 @@
   font-weight: 500;
   padding: 0.5em;
 }
+
 .footer a {
   color: #fff;
   text-decoration: none;
 }
+
 .footer a:hover {
   color: #bb86fc;
 }
+
 .footer a span {
   color: #bb86fc;
 }
+
 .home {
   text-align: center;
   position: absolute;
@@ -25,23 +29,28 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
 .home h1 {
   font-size: 4.5em;
   line-height: 1.1;
 }
+
 .home button {
   margin-top: 1.5em;
   font-size: 1.2em;
   padding: 0.8em 1.6em;
   margin: 0 0.5em;
 }
+
 .room {
   margin: 2rem;
 }
+
 .room .h1 {
   font-size: 2.5em;
   line-height: 1.1;
 }
+
 .room .room-header {
   display: flex;
   justify-content: space-between;
@@ -50,18 +59,21 @@
   font-size: 1.2em;
   font-weight: 500;
 }
-.room .main {
+
+.room .main-room {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
   height: 100%;
 }
+
 .row {
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-weight: 500;
 }
+
 .cell {
   width: 3em;
   height: 3em;
@@ -75,6 +87,7 @@
   align-items: center;
   font-size: 2em;
 }
+
 .currentChance {
   color: #bb86fc;
 }
@@ -86,6 +99,7 @@
   border-radius: 0.5em;
   transition: all 0.25s ease-in-out;
 }
+
 .roomid:hover {
   background-color: #bb86fc;
   color: #1a1a1a;
@@ -98,6 +112,7 @@
   align-items: center;
   margin-top: 2rem;
 }
+
 .join-room input {
   all: unset;
   border-radius: 0.5em;
@@ -108,6 +123,7 @@
   font-weight: 500;
   background-color: #1a1a1a;
 }
+
 .join-room button {
   border-radius: 8px;
   min-width: 6rem;
