--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,4 +1,4 @@
-.footer {
+/* .footer {
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -138,4 +138,4 @@
   position: absolute;
   bottom: 2rem;
   left: 2rem;
-}
+} */
