--- a/client/src/styles/Marketplace copy.css
+++ b/client/src/styles/Marketplace copy.css
@@ -1,6 +1,5 @@
 .nft-container {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -11,33 +10,27 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 1.25rem;
     justify-content: center;
     align-items: center;
     padding-inline: 10px;
-    padding-block: 100px;
-    margin-inline: auto;
+    padding-block: 50px;
 }
 
 .card {
-    position: relative;
-    width: 225px;
+    /* position: relative; */
+    width: 350px;
     background-color: #ffffff;
     padding: 30px 20px;
-    height: 325px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    height: 450px;
+    margin: 10px;
     box-shadow: 0 20px 30px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
-    gap: 6px;
 }
 
 .card img {
     display: block;
-    width: 70%;
-    height: 40%;
+    width: 180px;
+    height: 200px;
     position: relative;
     margin: 20px auto;
 }
